--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+@import 'ng-zorro-antd/ng-zorro-antd.min.css';
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+.no-margin {
+    margin: 0 !important;
+}
