--- a/src/app/components/home/home/home.component.html
+++ b/src/app/components/home/home/home.component.html
@@ -37,7 +37,7 @@
           
           <!-- Filter button -->
           <div class="z-20 flex items-center">
-            <button type="button" class="flex items-center px-4 py-3 border border-gray-200 rounded-xl shadow-sm hover:shadow-md transition-shadow">
+            <button type="button" class="flex w-[100px] items-center px-4 py-3 border border-gray-200 rounded-xl shadow-sm hover:shadow-md transition-shadow">
               <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4 mr-2">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M10.5 6h9.75M10.5 6a1.5 1.5 0 1 1-3 0m3 0a1.5 1.5 0 1 0-3 0M3.75 6H7.5m3 12h9.75m-9.75 0a1.5 1.5 0 0 1-3 0m3 0a1.5 1.5 0 0 0-3 0m-3.75 0H7.5m9-6h3.75m-3.75 0a1.5 1.5 0 0 1-3 0m3 0a1.5 1.5 0 0 0-3 0m-9.75 0h9.75" />
               </svg>
@@ -60,7 +60,7 @@
       <!-- Properties Grid -->
       <div class="mt-8">
         <div *ngIf="loading" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
-          <nz-skeleton-element *ngFor="let _ of [1,2,3,4,5,6]" nzType="input" [nzActive]="true" class="h-64"></nz-skeleton-element>
+          <nz-skeleton-element *ngFor="let _ of properties" nzType="input" [nzActive]="true" class="h-64"></nz-skeleton-element>
         </div>
         
         <div *ngIf="!loading" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
