--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -53,7 +53,7 @@
 
         <!-- Not logged in state -->
         <div *ngIf="!isLoggedIn">
-          <button (click)="showLoginModal()"
+          <button (click)="openLoginModal()"
             class="flex items-center gap-1 border border-gray-300 rounded-full p-1 shadow-sm hover:shadow-md transition-shadow duration-200">
             <div class="p-1">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-hidden="true" role="presentation"
@@ -110,101 +110,3 @@
     </div>
   </div>
 </header>
-
-<!-- Login Modal -->
-<nz-modal [(nzVisible)]="isLoginModalVisible" [nzTitle]="modalTitle" [nzFooter]="null" (nzOnCancel)="handleCancel()"
-  [nzWidth]="520">
-  <ng-template #modalTitle>
-    <div class="text-xl font-semibold text-center">Đăng nhập hoặc đăng ký</div>
-  </ng-template>
-  <div *nzModalContent class="p-4">
-    <h2 class="text-lg font-bold mb-6">Chào mừng bạn đến với DiEO BnB</h2>
-
-    <form [formGroup]="loginForm" (ngSubmit)="submitForm()" class="space-y-4">
-      <div class="flex items-center">
-        <nz-select formControlName="countryCode" class="w-24 mr-2">
-          <nz-option nzValue="+84" nzLabel="Việt Nam (+84)"></nz-option>
-          <nz-option nzValue="+1" nzLabel="United States (+1)"></nz-option>
-          <nz-option nzValue="+44" nzLabel="United Kingdom (+44)"></nz-option>
-          <!-- More country codes can be added here -->
-        </nz-select>
-
-        <nz-form-item class="w-full">
-          <nz-form-control nzErrorTip="Vui lòng nhập số điện thoại hợp lệ">
-            <nz-input-group>
-              <input type="tel" nz-input formControlName="phoneNumber" placeholder="Số điện thoại" />
-            </nz-input-group>
-          </nz-form-control>
-        </nz-form-item>
-      </div>
-
-      <div class="text-xs text-gray-500">
-        Chúng tôi sẽ gọi điện hoặc nhắn tin cho bạn để xác nhận số điện thoại. Có áp dụng phí dữ liệu và phí tin nhắn
-        tiêu chuẩn.
-      </div>
-
-      <button nz-button nzType="primary" [nzLoading]="isLoading"
-        class="w-full h-12 bg-[#FF5A5F] hover:bg-[#FF3A40] text-white rounded-lg">
-        Tiếp tục
-      </button>
-
-      <nz-divider nzText="hoặc"></nz-divider>
-
-      <div class="space-y-3">
-        <button nz-button class="w-full flex items-center justify-center h-12 border rounded-lg">
-          <span class="flex items-center">
-            <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
-              <path
-                d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z"
-                fill="#4285F4" />
-              <path
-                d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.57-2.77c-.98.66-2.23 1.06-3.71 1.06-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z"
-                fill="#34A853" />
-              <path
-                d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l2.85-2.22.81-.62z"
-                fill="#FBBC05" />
-              <path
-                d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z"
-                fill="#EA4335" />
-              <path d="M1 1h22v22H1z" fill="none" />
-            </svg>
-            <span class="ml-2">Tiếp tục với Google</span>
-          </span>
-        </button>
-
-        <button nz-button class="w-full flex items-center justify-center h-12 border rounded-lg">
-          <span class="flex items-center">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-              <path
-                d="M12.0003 2C6.4773 2 2.0003 6.477 2.0003 12C2.0003 17.523 6.4773 22 12.0003 22C17.5233 22 22.0003 17.523 22.0003 12C22.0003 6.477 17.5233 2 12.0003 2ZM12.9913 18.811V19.5L12.0003 19.5C11.4483 19.5 11.0003 19.052 11.0003 18.5V18.497L10.9913 18.5V14.5H8.0003V13C8.0003 11.895 8.8953 11 10.0003 11H14.0003C15.1053 11 16.0003 11.895 16.0003 13V14.5H13.0003V18.497C13.0003 18.602 12.9963 18.707 12.9913 18.811ZM12.0003 10C10.8963 10 10.0003 9.104 10.0003 8C10.0003 6.896 10.8963 6 12.0003 6C13.1043 6 14.0003 6.896 14.0003 8C14.0003 9.104 13.1043 10 12.0003 10Z"
-                fill="#000" />
-            </svg>
-            <span class="ml-2">Tiếp tục với Apple</span>
-          </span>
-        </button>
-
-        <button nz-button class="w-full flex items-center justify-center h-12 border rounded-lg">
-          <span class="flex items-center">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-              <path
-                d="M20.0003 4H4.0003C2.9003 4 2.0103 4.9 2.0103 6L2.0003 18C2.0003 19.1 2.9003 20 4.0003 20H20.0003C21.1003 20 22.0003 19.1 22.0003 18V6C22.0003 4.9 21.1003 4 20.0003 4ZM20.0003 8L12.0003 13L4.0003 8V6L12.0003 11L20.0003 6V8Z"
-                fill="#000" />
-            </svg>
-            <span class="ml-2">Tiếp tục bằng email</span>
-          </span>
-        </button>
-
-        <button nz-button class="w-full flex items-center justify-center h-12 border rounded-lg">
-          <span class="flex items-center">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-              <path
-                d="M20.0003 4H4.0003C2.9003 4 2.0103 4.9 2.0103 6L2.0003 18C2.0003 19.1 2.9003 20 4.0003 20H20.0003C21.1003 20 22.0003 19.1 22.0003 18V6C22.0003 4.9 21.1003 4 20.0003 4ZM20.0003 8L12.0003 13L4.0003 8V6L12.0003 11L20.0003 6V8Z"
-                fill="#1877F2" />
-            </svg>
-            <span class="ml-2">Tiếp tục với Facebook</span>
-          </span>
-        </button>
-      </div>
-    </form>
-  </div>
-</nz-modal>
